--- a/Testing/Code/Visualization/CMakeLists.txt
+++ b/Testing/Code/Visualization/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(BASELINE_FILES ${OTB_DATA_ROOT}/Baseline/OTB/Files)
 SET(INPUTDATA ${OTB_DATA_ROOT}/Input)
 SET(EXAMPLESDATA ${OTB_DATA_ROOT}/Examples)
 IF(OTB_DATA_USE_LARGEINPUT)
-  SET(IMAGEDATA ${OTB_DATA_LARGEINPUT_ROOT} )
+  SET(LARGEINPUTDATA ${OTB_DATA_LARGEINPUT_ROOT} )
 ENDIF(OTB_DATA_USE_LARGEINPUT)
 SET(TEMP ${OTBTesting_BINARY_DIR}/Temporary)
 
@@ -268,7 +268,7 @@ IF(OTB_DATA_USE_LARGEINPUT)
 
 ADD_TEST(vrTvImageViewerEndToEndWithVectorData ${VISUREFAC_TESTS1}
 otbImageViewerEndToEndWithVectorData
-${IMAGEDATA}/TOULOUSE/QuickBird/000000128955_01_P001_PAN/02APR01105228-P1BS-000000128955_01_P001.TIF
+${LARGEINPUTDATA}/TOULOUSE/QuickBird/000000128955_01_P001_PAN/02APR01105228-P1BS-000000128955_01_P001.TIF
 ${INPUTDATA}/ToulouseRoad-examples.shp
 ${INPUTDATA}/DEM/srtm_directory
 200 500 200 0
@@ -289,9 +289,9 @@ ${INPUTDATA}/couleurs.tif 0
 IF(OTB_DATA_USE_LARGEINPUT)
 ADD_TEST(vrTvStandardImageViewerToulouseWithWaterwaysShp ${VISUREFAC_TESTS1}
 otbStandardImageViewer
-${IMAGEDATA}/TOULOUSE/QuickBird/000000128955_01_P001_MUL/02APR01105228-M1BS-000000128955_01_P001.TIF 
+${LARGEINPUTDATA}/TOULOUSE/QuickBird/000000128955_01_P001_MUL/02APR01105228-M1BS-000000128955_01_P001.TIF
 0
-${INPUTDATA}/waterways.shp
+${LARGEINPUTDATA}/VECTOR/MidiPyrenees/waterways.shp
 ${INPUTDATA}/DEM/srtm_directory
 )
 ENDIF(OTB_DATA_USE_LARGEINPUT)
