ENH: Enhancing standard image viewer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,6 +278,7 @@ IF(OTB_USE_VISU_GUI)
                 #----------------------------------------------------------------
                 # RESUME Alls VISU GUI libraries use by OTB in a single VARIABLE
                 SET(OTB_VISU_GUI_LIBRARIES "${FLTK_LIBRARIES};${OPENGL_LIBRARIES} ")
+		SET(FLTK_FLUID_EXECUTABLE ${OTB_BINARY_DIR}/bin/fluid)
 
         ENDIF(OTB_USE_EXTERNAL_FLTK)
 
