--- a/Code/Visualization/CMakeLists.txt
+++ b/Code/Visualization/CMakeLists.txt
@@ -9,7 +9,9 @@ IF(APPLE AND BUILD_SHARED_LIBS)
       ENDFOREACH(c)
 ENDIF(APPLE AND BUILD_SHARED_LIBS)
 
-ADD_LIBRARY(OTBVisualization ${OTBVisualization_SRCS})
+FLTK_WRAP_UI(OTBVisualization otbImageWidgetPackedManager.fl)
+
+ADD_LIBRARY(OTBVisualization ${OTBVisualization_SRCS} ${OTBVisualization_FLTK_UI_SRCS})
 TARGET_LINK_LIBRARIES (OTBVisualization OTBGui OTBCommon ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES})
 
 INSTALL(TARGETS OTBVisualization
@@ -19,7 +21,9 @@ ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
 
 FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
+FILE(GLOB __files3 "${CMAKE_CURRENT_BINARY_DIR}/*.h")
+FILE(GLOB __files4 "${CMAKE_CURRENT_SOURCE_DIR}/*.fl")
 
-INSTALL(FILES ${__files1} ${__files2}
+INSTALL(FILES ${__files1} ${__files2} ${__files3} ${__files4}
     DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Visualization
     COMPONENT Development)
