BUG: fixing boost

--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -120,3 +120,5 @@ SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "@OTB_IO_UTILITIES_DEPENDENT_LIBRARIES@
 #SET(OTBGALIB_VERSION_PATCH "@OTBGALIB_VERSION_PATCH@")
 #SET(OTBGALIB_VERSION_STRING "@OTBGALIB_VERSION_STRING@")
 
+# Option use external BOOST.
+SET(OTB_USE_EXTERNAL_BOOST "@OTB_USE_EXTERNAL_BOOST@")
