Compilation ok for otb vector data to mapnik

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,23 @@ cmake_minimum_required(VERSION 2.6)
 
 PROJECT(mapnik)
 
-INCLUDE_DIRECTORIES("/home/christop/slash/include" )
+FIND_PACKAGE(OTB)
+IF(OTB_FOUND)
+  INCLUDE(${OTB_USE_FILE})
+ELSE(OTB_FOUND)
+  MESSAGE(FATAL_ERROR
+          "OTB not found. Please set OTB_DIR")
+ENDIF(OTB_FOUND)
+
+
+# INCLUDE_DIRECTORIES("/home/christop/slash/include" )
 INCLUDE_DIRECTORIES("/usr/include/freetype2" )
-LINK_DIRECTORIES("/home/christop/slash/lib")
+# LINK_DIRECTORIES("/home/christop/slash/lib")
+
+
 
 ADD_EXECUTABLE(myOwnMapnik myOwnMapnik.cxx)
 TARGET_LINK_LIBRARIES(myOwnMapnik mapnik)
+
+ADD_EXECUTABLE(mapnikFromVectorData mapnikFromVectorData.cxx)
+TARGET_LINK_LIBRARIES(mapnikFromVectorData OTBCommon OTBIO mapnik)
