Working with todays svn mapnik version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ ELSE(OTB_FOUND)
 ENDIF(OTB_FOUND)
 
 
-# INCLUDE_DIRECTORIES("/home/christop/slash/include" )
+INCLUDE_DIRECTORIES("/home/christop/slash/include" )
 INCLUDE_DIRECTORIES("/usr/include/freetype2" )
-# LINK_DIRECTORIES("/home/christop/slash/lib")
+LINK_DIRECTORIES("/home/christop/slash/lib64")
 
 
 
