--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -1524,9 +1524,12 @@ ADD_TEST(ioTuVectorDataFileWriterNew ${IO_TESTS15}
 
 
 ADD_TEST(ioTvVectorDataFileWriter ${IO_TESTS15}
+        --compare-ogr  ${TOL}
+            ${BASELINE_FILES}/ioTvVectorDataFileWriterOutput.shp
+            ${TEMP}/ioTvVectorDataFileWriterOutput.shp
         otbVectorDataFileWriter
-	${TEMP}/ioTvVectorDataFileWriterOutput.shp
-	)
+        ${TEMP}/ioTvVectorDataFileWriterOutput.shp
+)
 
 ADD_TEST(ioTvVectorDataFileWriterTwice ${IO_TESTS15}
         otbVectorDataFileWriter
@@ -1535,6 +1538,9 @@ ADD_TEST(ioTvVectorDataFileWriterTwice ${IO_TESTS15}
 
 
 ADD_TEST(ioTvVectorDataFileWriterPolygons ${IO_TESTS15}
+        --compare-ogr  ${TOL}
+            ${BASELINE_FILES}/ioTvVectorDataFileWriterOutput.shp
+            ${TEMP}/ioTvVectorDataFileWriterOutput.shp
         otbVectorDataFileWriterPolygons
     ${TEMP}/ioTvVectorDataFileWriterOutput.shp
     )
@@ -1542,13 +1548,9 @@ ADD_TEST(ioTvVectorDataFileWriterPolygons ${IO_TESTS15}
 
 IF(OTB_DATA_USE_LARGEINPUT)
 ADD_TEST(ioTvVectorDataFileReaderWriter ${IO_TESTS15}
-        --compare-n-binary 3
+        --compare-ogr  ${TOL}
             ${BASELINE_FILES}/ioTvVectorDataFileReaderWriterOutput.shp
             ${TEMP}/ioTvVectorDataFileReaderWriterOutput.shp
-            ${BASELINE_FILES}/ioTvVectorDataFileReaderWriterOutput.shx
-            ${TEMP}/ioTvVectorDataFileReaderWriterOutput.shx
-            ${BASELINE_FILES}/ioTvVectorDataFileReaderWriterOutput.dbf
-            ${TEMP}/ioTvVectorDataFileReaderWriterOutput.dbf
         otbVectorDataFileReaderWriter
             ${LARGEDATA}/TOULOUSE/QuickBird/GIS_FILES/000000128955_01_ORDER_SHAPE.shp
             ${TEMP}/ioTvVectorDataFileReaderWriterOutput.shp
@@ -1556,30 +1558,18 @@ ADD_TEST(ioTvVectorDataFileReaderWriter ${IO_TESTS15}
 ENDIF(OTB_DATA_USE_LARGEINPUT)
 
 ADD_TEST(ioTvVectorDataFileGeoReaderWriter ${IO_TESTS15}
-        --compare-n-binary 4
+        --compare-ogr  ${TOL}
             ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput.shp
             ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput.shp
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput.shx
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput.shx
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput.dbf
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput.dbf
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput.prj
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput.prj
         otbVectorDataFileGeoReaderWriter
             ${INPUTDATA}/ToulouseRoad-examples.shp
             ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput.shp
 	)
 
 ADD_TEST(ioTvVectorDataFileGeoReaderWriter2 ${IO_TESTS15}
-        --compare-n-binary 4
+        --compare-ogr  ${TOL}
             ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput2.shp
             ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput2.shp
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput2.shx
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput2.shx
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput2.dbf
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput2.dbf
-            ${BASELINE_FILES}/ioTvVectorDataFileGeoReaderWriterOutput2.prj
-            ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput2.prj
         otbVectorDataFileGeoReaderWriter
             ${INPUTDATA}/Capitole-Shadows.kml
             ${TEMP}/ioTvVectorDataFileGeoReaderWriterOutput2.shp
