BUG: CMakeLists correction: replace as following  CMake by /CMake (add / separator)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,7 +380,7 @@ INCLUDE_DIRECTORIES(${OGR_INCLUDE_DIRS})
 
 # Check if ${GDAL_LIBRARY} has tiff library
 TRY_COMPILE(GDAL_HAS_TIFF
-${CMAKE_CURRENT_BINARY_DIR}CMake
+${CMAKE_CURRENT_BINARY_DIR}/CMake
 ${CMAKE_CURRENT_SOURCE_DIR}/CMake/TestGDALHasTiff.cxx
 CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:PATH=${TIFF_INCLUDE_DIRS};${GDAL_INCLUDE_DIRS}" "-DLINK_LIBRARIES:STRING=${GDAL_LIBRARY}"
 OUTPUT_VARIABLE OUTPUT)
